
syntax = "proto3";
package pb;
import "packet.proto";
option go_package = "../pb";  // 声明生成的 go 文件所属的包

// 登陆请求
message GateLoginRequest {
}

message GateLoginResponse {
    RpcHead Head = 1;
}
